--- a/.github/workflows/nightly-release-ui-test.yaml
+++ b/.github/workflows/nightly-release-ui-test.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        branch: [ release/1.10.x, release/1.11.x, release/1.12.x ]
+        branch: [ release/1.11.x, release/1.12.x ]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -36,7 +36,7 @@ jobs:
     needs: [frontend-cache]
     strategy:
       matrix:
-        branch: [ release/1.10.x, release/1.11.x, release/1.12.x ]
+        branch: [ release/1.11.x, release/1.12.x ]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -70,7 +70,7 @@ jobs:
     needs: [frontend-cache]
     strategy:
       matrix:
-        branch: [ release/1.10.x, release/1.11.x, release/1.12.x ]
+        branch: [ release/1.11.x, release/1.12.x ]
     env:
       JOBS: 2
       CONSUL_NSPACES_ENABLED: 0
@@ -108,7 +108,7 @@ jobs:
     needs: [frontend-build-oss]
     strategy:
       matrix:
-        branch: [ release/1.10.x, release/1.11.x, release/1.12.x ]
+        branch: [ release/1.11.x, release/1.12.x ]
         partion: [ 1, 2, 3, 4 ]
     env:
       CONSUL_NSPACES_ENABLED: 0
@@ -150,7 +150,7 @@ jobs:
     needs: [frontend-cache]
     strategy:
       matrix:
-        branch: [ release/1.10.x, release/1.11.x, release/1.12.x ]
+        branch: [ release/1.11.x, release/1.12.x ]
     env:
       JOBS: 2
       CONSUL_NSPACES_ENABLED: 1
@@ -188,7 +188,7 @@ jobs:
     needs: [frontend-build-ent]
     strategy:
       matrix:
-        branch: [ release/1.10.x, release/1.11.x, release/1.12.x ]
+        branch: [ release/1.11.x, release/1.12.x ]
         partion: [ 1, 2, 3, 4 ]
     env:
       CONSUL_NSPACES_ENABLED: 1
@@ -230,7 +230,7 @@ jobs:
     needs: [frontend-build-ent]
     strategy:
       matrix:
-        branch: [ release/1.10.x, release/1.11.x, release/1.12.x ]
+        branch: [ release/1.11.x, release/1.12.x ]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -253,15 +253,18 @@ jobs:
         working-directory: ./ui/packages/consul-ui
         run: make test-coverage-ci
 
-  slack-failure-notification:
-    runs-on: ubuntu-latest
-    needs: [frontend-test-oss, frontend-test-ent]
-    if: ${{ failure() }}
-    steps:
-      - name: Slack Notification
-        id: slack
-        uses: slackapi/slack-github-action@main
-        with:
-          payload: "{\"message\":\"One or more nightly UI test have failed on a release branch for Consul. [Link to Failed Action](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}). \"}"
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.CONSUL_CORE_SLACK_WEBHOOK }}
+  # slack-failure-notification:
+  #   runs-on: ubuntu-latest
+  #   needs: [frontend-test-oss, frontend-test-ent]
+  #   if: ${{ failure() }}
+  #   steps:
+  #     - name: Slack Notification
+  #       id: slack
+  #       uses: slackapi/slack-github-action@v1.19
+  #       with:
+  #         payload: |
+  #           {
+  #             "message": "One or more nightly UI test have failed on a release branch for Consul. [Link to Failed Action](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID})."
+  #           }
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.CONSUL_CORE_SLACK_WEBHOOK }}
