--- a/.github/workflows/nightly-release-ui-test.yaml
+++ b/.github/workflows/nightly-release-ui-test.yaml
@@ -5,19 +5,18 @@ on:
   workflow_dispatch: {}
 
 env:
-  EMBER_PARTITION_TOTAL: 4  # Has to be changed in tandem with the matrix.partition
+  EMBER_PARTITION_TOTAL: 4      # Has to be changed in tandem with the matrix.partition
+  BRANCH: "release/1.12.x"
+  BRANCH_NAME: "release-1.12.x" # Used for naming artifacts
 
 jobs:
   frontend-cache:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        branch: [ release/1.11.x, release/1.12.x ]
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{ matrix.branch }}
+          ref: ${{ env.BRANCH }}
 
       # Not necessary to use yarn, but enables caching
       - uses: actions/setup-node@v3
@@ -34,14 +33,11 @@ jobs:
   frontend-test-workspace-node:
     runs-on: ubuntu-latest
     needs: [frontend-cache]
-    strategy:
-      matrix:
-        branch: [ release/1.11.x, release/1.12.x ]
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{ matrix.branch }}
+          ref: ${{ env.BRANCH }}
 
       # Not necessary to use yarn, but enables caching
       - uses: actions/setup-node@v3
@@ -68,9 +64,6 @@ jobs:
   frontend-build-oss:
     runs-on: ubuntu-latest
     needs: [frontend-cache]
-    strategy:
-      matrix:
-        branch: [ release/1.11.x, release/1.12.x ]
     env:
       JOBS: 2
       CONSUL_NSPACES_ENABLED: 0
@@ -78,7 +71,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{ matrix.branch }}
+          ref: ${{ env.BRANCH }}
 
       # Not necessary to use yarn, but enables caching
       - uses: actions/setup-node@v3
@@ -100,7 +93,7 @@ jobs:
       - name: Upload OSS Frontend
         uses: actions/upload-artifact@v3
         with:
-          name: frontend-oss-${{ matrix.branch }}
+          name: frontend-oss-${{ env.BRANCH_NAME }}
           path: ./ui/packages/consul-ui/dist
           if-no-files-found: error
 
@@ -109,7 +102,6 @@ jobs:
     needs: [frontend-build-oss]
     strategy:
       matrix:
-        branch: [ release/1.11.x, release/1.12.x ]
         partition: [ 1, 2, 3, 4 ]
     env:
       CONSUL_NSPACES_ENABLED: 0
@@ -119,7 +111,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{ matrix.branch }}
+          ref: ${{ env.BRANCH }}
 
       # Not necessary to use yarn, but enables caching
       - uses: actions/setup-node@v3
@@ -136,7 +128,7 @@ jobs:
       - name: Download OSS Frontend
         uses: actions/upload-artifact@v3
         with:
-          name: frontend-oss-${{ matrix.branch }}
+          name: frontend-oss-${{ env.BRANCH_NAME }}
           path: ./ui/packages/consul-ui/dist
 
       - name: Ember Test OSS
@@ -149,9 +141,6 @@ jobs:
   frontend-build-ent:
     runs-on: ubuntu-latest
     needs: [frontend-cache]
-    strategy:
-      matrix:
-        branch: [ release/1.11.x, release/1.12.x ]
     env:
       JOBS: 2
       CONSUL_NSPACES_ENABLED: 1
@@ -159,7 +148,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{ matrix.branch }}
+          ref: ${{ env.BRANCH }}
 
       # Not necessary to use yarn, but enables caching
       - uses: actions/setup-node@v3
@@ -181,7 +170,7 @@ jobs:
       - name: Upload ENT Frontend
         uses: actions/upload-artifact@v3
         with:
-          name: frontend-ent-${{ matrix.branch }}
+          name: frontend-ent-${{ env.BRANCH_NAME }}
           path: ./ui/packages/consul-ui/dist
           if-no-files-found: error
 
@@ -190,7 +179,6 @@ jobs:
     needs: [frontend-build-ent]
     strategy:
       matrix:
-        branch: [ release/1.11.x, release/1.12.x ]
         partition: [ 1, 2, 3, 4 ]
     env:
       CONSUL_NSPACES_ENABLED: 1
@@ -200,7 +188,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{ matrix.branch }}
+          ref: ${{ env.BRANCH }}
 
       # Not necessary to use yarn, but enables caching
       - uses: actions/setup-node@v3
@@ -217,7 +205,7 @@ jobs:
       - name: Download ENT Frontend
         uses: actions/upload-artifact@v3
         with:
-          name: frontend-ent-${{ matrix.branch }}
+          name: frontend-ent-${{ env.BRANCH_NAME }}
           path: ./ui/packages/consul-ui/dist
 
       - name: Ember Test ENT
@@ -230,14 +218,11 @@ jobs:
   frontend-test-coverage-ent:
     runs-on: ubuntu-latest
     needs: [frontend-build-ent]
-    strategy:
-      matrix:
-        branch: [ release/1.11.x, release/1.12.x ]
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: ${{ matrix.branch }}
+          ref: ${{ env.BRANCH }}
 
       # Not necessary to use yarn, but enables caching
       - uses: actions/setup-node@v3
