--- a/.github/workflows/nightly-release-ui-test.yaml
+++ b/.github/workflows/nightly-release-ui-test.yaml
@@ -111,7 +111,13 @@ jobs:
         working-directory: ./ui/packages/consul-ui
         run: node_modules/.bin/ember exam --split=$EMBER_PARTITION_TOTAL --partition=${{ matrix.partition }} --path dist --silent -r xunit
 
-      # TODO: add test-reporter: https://github.com/marketplace/actions/test-reporter
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Ember Test Results - Partition ${{ matrix.partition }}
+          path: ./ui/packages/consul-ui/test-results/*.xml
+          reporter: dotnet-trx
 
   frontend-build-ent:
     runs-on: ubuntu-latest
@@ -185,7 +191,13 @@ jobs:
         working-directory: ./ui/packages/consul-ui
         run: node_modules/.bin/ember exam --split=$EMBER_PARTITION_TOTAL --partition=${{ matrix.partition }} --path dist --silent -r xunit
 
-        # TODO: add test-reporter: https://github.com/marketplace/actions/test-reporter
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Ember Test Results - Partition ${{ matrix.partition }}
+          path: ./ui/packages/consul-ui/test-results/*.xml
+          reporter: dotnet-trx
 
   frontend-test-coverage-ent:
     runs-on: ubuntu-latest
@@ -217,18 +229,18 @@ jobs:
         working-directory: ./ui/packages/consul-ui
         run: make test-coverage-ci
 
-  # slack-failure-notification:
-  #   runs-on: ubuntu-latest
-  #   needs: [frontend-test-oss, frontend-test-ent]
-  #   if: ${{ failure() }}
-  #   steps:
-  #     - name: Slack Notification
-  #       id: slack
-  #       uses: slackapi/slack-github-action@v1.19
-  #       with:
-  #         payload: |
-  #           {
-  #             "message": "One or more nightly UI test have failed on a release branch for Consul. [Link to Failed Action](${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID})."
-  #           }
-  #       env:
-  #         SLACK_WEBHOOK_URL: ${{ secrets.CONSUL_CORE_SLACK_WEBHOOK }}
+  slack-failure-notification:
+    runs-on: ubuntu-latest
+    needs: [frontend-test-oss, frontend-test-ent]
+    if: ${{ failure() }}
+    steps:
+      - name: Slack Notification
+        id: slack
+        uses: slackapi/slack-github-action@v1.19
+        with:
+          payload: |
+            {
+              "message": "One or more nightly UI test have failed on a branch ${{ env.BRANCH }} for Consul. [Link to Failed Action](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})."
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.CONSUL_CORE_SLACK_WEBHOOK }}
